# fx

./: .gitignore  .ormolu  LICENSE  README.md  acquire.cabal  build.bash  fx.cabal  stack.yaml
test/: Main.hs
