name:
  acquire
version:
  0.3.1
synopsis:
  Abstraction over management of resources
description:
  Set of abstractions which focus on different aspects of resource-
  and error-handling in the context of effectful applications.
category:
  Resources
homepage:
  https://github.com/metrix-ai/acquire
bug-reports:
  https://github.com/metrix-ai/acquire/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Metrix.AI Tech Team <tech@metrix.ai>
copyright:
  (c) 2013 Gabriel Gonzalez, 2018 Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/metrix-ai/acquire.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Acquire
  other-modules:
    Acquire.Accessor
    Acquire.Eio
    Acquire.IO
    Acquire.Prelude
    Acquire.Process
    Acquire.Provider
    Acquire.Types
    Acquire.Uio
  build-depends:
    base >=4.9 && <5,
    mtl >=2.2 && <3,
    semigroupoids >=5.3 && <6,
    transformers >=0.5 && <0.6
