cabal-version: 3.0
name: fx
version: 0.5
synopsis: Revamped effect system
category: Effects, Resources
homepage: https://github.com/nikita-volkov/fx
bug-reports: https://github.com/nikita-volkov/fx/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/fx.git

library
  hs-source-dirs: library
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples

  default-language: Haskell2010
  exposed-modules:
    Fx

  other-modules:
    Fx.Prelude
    Fx.Strings

  build-depends:
    base >=4.9 && <5,
    stm >=2.5 && <3,
    text >=1 && <3,
    transformers >=0.5 && <0.8,
    unordered-containers >=0.2.10 && <0.3,

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NoImplicitPrelude
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    QuickCheck >=2.13 && <3,
    fx,
    quickcheck-instances >=0.3.22 && <0.4,
    rerebase <2,
    tasty >=1.2.3 && <2,
    tasty-hunit >=0.10.0.2 && <0.11,
    tasty-quickcheck >=0.10.1 && <0.11,
